--- a/tf31/css/style.css
+++ b/tf31/css/style.css
@@ -188,7 +188,7 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-top: 25px;
+  margin-top: 25px auto 0;
   padding-top: 5px;
   padding-right: 27px;
   padding-bottom: 4px;
@@ -556,6 +556,7 @@ body {
 }
 
 .news__section-inner {
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1319,7 +1320,7 @@ body {
 .company__tab-menu .is-active::before {
   content: "";
   display: block;
-  background: url(../img/down-arrow-white.svg) no-repeat center center/contain;
+  background: url(../img/svg/down-arrow-white.svg) no-repeat center center/contain;
   position: absolute;
   width: 12px;
   height: 12px;
@@ -1577,6 +1578,11 @@ body {
   margin-bottom: 168px;
 }
 
+@media screen and (min-width: 768px) {
+  .certifications__contents-wrapper {
+    margin: 58px 30px 168px;
+  }
+}
 @media screen and (min-width: 768px) {
   .certifications__contents-wrapper {
     margin: 80px 150px 156px;
@@ -2215,10 +2221,6 @@ body {
 .footer__copyright {
   color: #fff;
   text-align: center;
-  font-family: "Noto Sans JP";
-  font-size: 14px;
-  font-weight: 500;
-}/*# sourceMappingURL=style.css.map */er;
   font-family: "Noto Sans JP";
   font-size: 14px;
   font-weight: 500;
